src/modules/shadow/assets/css/shadow.css
#shadow-outside {
    position: absolute;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 80;
    display: none;
    background: rgba(0, 0, 0, 0.8);
}

#shadow-item {
    background: white;
    color: black;
    height: 100%;
	font-family: "Arial" !important;
}

.shadow-content {
    padding: 20px;
    padding-top: 0;
    text-align: left;
    width: auto;
}

#edit-content, #edit-content-wrapper {
    width: 100%;
    min-height: 180px;
    display: block;
}

#edit-title, #edit-teaser {
    text-align: left;
    font-size: 1.2em;
    width: 70%;
    display: block;
}

#shadow-single {
    position: relative;
    background: white;
    margin: auto;
    display: inline-block;
    margin-top: 80px;
    z-index: 200;
    width: auto;
}

#shadow-titles {
    text-align: center;
    overflow: hidden;
    background: #dfdfdf;
    text-transform: uppercase;
    font-size: 1em;
}

#shadow-titles a.shadow-title {
    border-right: none;
    display: block;
    text-align: center;
    color: #333333;
    display: block;
    text-decoration: none !important;
    font-size: 0.7em;
    font-weight: bold;
}

#shadow-titles a.shadow-title.enabled {
    opacity: 1;
    background: white;
}
#shadow-titles a.shadow-title:hover {
    background: #f3f3f3;
}

#shadow-titles a.shadow-title.enabled a {
    color: #005;
}

.shadow-grouped-contents .shadow-content {
    display: block;
}

#shadow-contents .shadow-content {
    display: none;
}

#shadow-contents .shadow-content.enabled {
    display: block;
}

#shadow-contents .shadow-content.hidden {
    display: none;
}

#shadow-contents label {
    display: inline-block;
    margin: 0;
    margin-top: 10px;
    font-weight: bold;
    padding-right: 8px;
    border: none;
    padding-left: 0;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-size: 0.8em;
    color: #444;
}

.shadow-description {
   padding-bottom: 20px;
    padding-top: 20px;
    font-style: italic;
    font-size: 0.8em;
    color: #555;
}

#shadow-tabs #shadow-buttons {
    position: absolute;
    z-index: 1999;
    display: inline-block;
    bottom: 20px;
    right: 0;
}

#shadow-single #shadow-buttons {
    text-align: right;
}

#shadow-buttons a {
    font-size: 1.1em;
    text-decoration: none;
    border-radius: 15px;
    padding: 8px;
    cursor: pointer;
    text-transform: uppercase;
    font-family: Arial;
    margin-right: 15px;
    background: #f3f3f4;
    border: 1px solid #aaa
}

#shadow-buttons a:hover {
    opacity: 0.7;
    background: #fafafa;
}

.shadow-grouped-contents #shadow-buttons {
    position: relative;
    display: block;
    clear: both;
}

.shadow-content h2 {
    color: black;
    margin: 0;
    padding-bottom: 2px;
    margin-top: 10px;
    border-bottom: 2px dotted #ccc;
}

#shadow-extra {
    float: right;
}

.shadow-submitted {
    opacity: 0.4 !important;
    cursor: none !important;
    pointer-events: none !important;
}

